--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "temporary": "0.0.5",
     "request": "~2.20.0",
     "lru-cache": "~2.3.0",
-    "imagemagick": "~0.1.3"
+    "imagemagick": "~0.1.3",
+    "optimist": "~0.4.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
