--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "request": "~2.20.0",
     "lru-cache": "~2.3.0",
     "imagemagick": "~0.1.3",
-    "optimist": "~0.4.0"
+    "optimist": "~0.4.0",
+    "async": "~0.2.7"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
